<resources>
    <string name="app_name">BookingEvent</string>
    <string name="title_app">BOOKING EVENT</string>
    <string name="title_dialog_error">ERROR!</string>
    <string name="title_dialog_confirm_logout">CONFIRM LOGOUT</string>
    <string name="body_dialog_error_connection">Your network is disconnect!\nPlease try again.</string>
    <string name="body_dialog_confirm_logout">Are you sure you want to log out?</string>
    <string name="btn_dialog_error_connection">Try Again</string>
    <string name="btn_dialog_confirm_cancel">No</string>
    <string name="btn_dialog_confirm_ok">Yes</string>
    <string name="bnv_dashboard">home</string>
    <string name="bnv_account">account</string>
    <string name="bnv_search">"search "</string>
    <string name="title_account_name">Display Name</string>
    <string name="title_account_email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_title_item_example">This is a sample of long title</string>
    <string name="tv_time_item_example">15h30 – 17h00</string>
    <string name="btn_save_filter">SAVE</string>
    <string name="bnv_add">add</string>
    <string name="hint_department">Department</string>
    <string name="body_need_fill_data">Please fill in all the information \n marked with red star</string>
    <string name="btn_dialog_need_fill_data">Confirm</string>
    <string name="body_time_error">Please set the time end after the time start</string>
    <string name="title_dialog_success">Success</string>
    <string name="body_dialog_success">Add Event Success</string>
    <string name="title_layout_edit_event">Edit Event</string>
</resources>