<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="333dp"
    android:layout_height="256dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_marginTop="11dp">

        <ImageView
            android:id="@+id/img_success"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_success"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="5dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_title_title"
        android:layout_width="63dp"
        android:layout_height="21dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/title_dialog_success"
        android:textAllCaps="true"
        android:textColor="#3ab549"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_body"
        android:layout_width="wrap_content"
        android:layout_height="78dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/body_dialog_success"
        android:gravity="center"
        android:textAppearance="@style/body_dialog_error_connection"
        android:textSize="13dp" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3ab549"
        android:text="@string/btn_dialog_need_fill_data"
        android:layout_gravity="center"
        android:textAppearance="@style/btn_dialog_error_connection"/>

</LinearLayout>